# ZeroMQInterface

./: .codecov.yml  .gitignore  .travis.yml  CHANGES.md  COPYRIGHT.md  Makefile.am  Makefile.in  PackageInfo.g  README  README.md  configure.ac  init.g  makedoc.g  read.g  zgap
.github/workflows/: CI.yml
_data/: package.yml
doc/: chap0.html  chap0.html-e  chap0.txt  chap0_mj.html  chap0_mj.html-e  chap1.html  chap1.html-e  chap1.txt  chap1_mj.html  chap1_mj.html-e  chap2.html  chap2.txt  chap2_mj.html  chap2_mj.html-e  chap3.html  chap3.txt  chap3_mj.html  chap3_mj.html-e  chapInd.html  chapInd.html-e  chapInd.txt  chapInd_mj.html  chapInd_mj.html-e  intro.xml  zgap.xml  zmq.xml
gap/: zmq.g  znode.g
m4/: ax_zmq.m4
src/: zmqgap.c  zmqgap.h
tst/: basic.tst  testall.g
